Fix column alignment

--- a/web-client/src/styles/tables.scss
+++ b/web-client/src/styles/tables.scss
@@ -193,6 +193,7 @@ table.work-queue {
   }
 
   td {
+    padding: 15px 16px;
     border: none;
     font-size: 17px;
 
